Completed Problem 3 with reasonable runtime.

--- a/ProjectEulerTests/ProjectEulerTests.csproj
+++ b/ProjectEulerTests/ProjectEulerTests.csproj
@@ -53,6 +53,7 @@
   <ItemGroup>
     <Compile Include="Problem1Tests.cs" />
     <Compile Include="Problem2Tests.cs" />
+    <Compile Include="Problem3Tests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
